--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,15 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192.png?text=TL+Icon",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://via.placeholder.com/512.png?text=TenisLigi",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
+
 }
