--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,20 @@
   "theme_color": "#2c3e50",
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "icon-192.png",
+  {
+      "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
+      "type": "image/png",
+      "purpose": "any"
+  },
+  {
+      "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
       "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+      "type": "image/png",
+      "purpose": "maskable"
+  }
+]
+
 
 }
+
