--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "background_color": "#f4f7f6",
   "theme_color": "#2c3e50",
   "orientation": "portrait",
+  "gcm_sender_id": "103953800507",
   "icons": [
   {
       "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
@@ -20,6 +21,4 @@
       "purpose": "maskable"
   }
 ]
-
-
 }
