--- a/manifest.json
+++ b/manifest.json
@@ -4,18 +4,17 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f4f7f6",
-  "theme_color": "#2c3e50",
+  "theme_color": "#c06035", 
   "orientation": "portrait",
-  "gcm_sender_id": "103953800507",
   "icons": [
   {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
+      "src": "logo-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
   },
   {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
+      "src": "logo-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
